; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/dtoverlay/extr_dtoverlay_main.c_dtparam_apply.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/dtoverlay/extr_dtoverlay_main.c_dtparam_apply.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dtparam_state = type { i8*, i32* }

@dtparam_callback = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"out of memory\00", align 1
@FDT_ERR_NOSPACE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dtparam_apply(i32* %0, i8* %1, i8* %2, i32 %3, i8* %4, i32* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca %struct.dtparam_state, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i8* %4, i8** %11, align 8
  store i32* %5, i32** %12, align 8
  %16 = load i32*, i32** %12, align 8
  %17 = getelementptr inbounds %struct.dtparam_state, %struct.dtparam_state* %13, i32 0, i32 1
  store i32* %16, i32** %17, align 8
  %18 = load i8*, i8** %11, align 8
  %19 = getelementptr inbounds %struct.dtparam_state, %struct.dtparam_state* %13, i32 0, i32 0
  store i8* %18, i8** %19, align 8
  %20 = load i32, i32* %10, align 4
  %21 = call i8* @malloc(i32 %20)
  store i8* %21, i8** %14, align 8
  %22 = load i8*, i8** %14, align 8
  %23 = icmp ne i8* %22, null
  br i1 %23, label %24, label %38

24:                                               ; preds = %6
  %25 = load i8*, i8** %14, align 8
  %26 = load i8*, i8** %9, align 8
  %27 = load i32, i32* %10, align 4
  %28 = call i32 @memcpy(i8* %25, i8* %26, i32 %27)
  %29 = load i32*, i32** %7, align 8
  %30 = load i8*, i8** %8, align 8
  %31 = load i8*, i8** %14, align 8
  %32 = load i32, i32* %10, align 4
  %33 = load i32, i32* @dtparam_callback, align 4
  %34 = bitcast %struct.dtparam_state* %13 to i8*
  %35 = call i32 @dtoverlay_foreach_override_target(i32* %29, i8* %30, i8* %31, i32 %32, i32 %33, i8* %34)
  store i32 %35, i32* %15, align 4
  %36 = load i8*, i8** %14, align 8
  %37 = call i32 @free(i8* %36)
  br label %42

38:                                               ; preds = %6
  %39 = call i32 @dtoverlay_error(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %40 = load i32, i32* @FDT_ERR_NOSPACE, align 4
  %41 = call i32 @NON_FATAL(i32 %40)
  store i32 %41, i32* %15, align 4
  br label %42

42:                                               ; preds = %38, %24
  %43 = load i32, i32* %15, align 4
  ret i32 %43
}

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @dtoverlay_foreach_override_target(i32*, i8*, i8*, i32, i32, i8*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @dtoverlay_error(i8*) #1

declare dso_local i32 @NON_FATAL(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
